src/test/deca/context/invalid/sansObjet/IntAffectationWithFloat.deca
{
    int x = 2020;
    float y = 2020;
    x = 20 + y;

}
